@@ -1,5 +1,8 @@
 == HEAD
 
+Bugs:
+* #978 - Fix for invalid chars being left in a string for invalid b_value from encoding (kjg)
+
 == Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>
 
 Features:
